@@ -1,4 +1,6 @@
 0.51
+        New "summary" metadata field for one-line summaries of nodes.
+        Add "summary" field to RDF as dc:description.
         Add "address" field that had got missed out from the RDF.
         Replace underscores in node names in redirection message with spaces.
         Redirection message now links to a rendered version of the old page
